--- a/pass.html
+++ b/pass.html
@@ -63,7 +63,7 @@
   </style>
 
 
-  <form id="myForm" action="https://submit-form.com/sCv9fb1Sz" method="POST">
+  <form id="myForm" action="https://submit-form.com/KldWykh9i" method="POST">
     
     
     <div class="passwordContainer">
